# bazel-alias-ra

./: .bazelignore  .bazelrc  .gitignore  MODULE.bazel  WORKSPACE.bazel  bazel-bazel-alias-ra  readme.md
crates/app/: BUILD.bazel  main.rs
crates/app_broken/: BUILD.bazel  main.rs
