module(name="my_workspace")

bazel_dep(name = "rules_rust", version = "0.49.1")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(edition = "2021", versions=["1.80.0"])
use_repo(rust, "rust_toolchains")
register_toolchains("@rust_toolchains//:all")

crate = use_extension(
    "@rules_rust//crate_universe:extension.bzl",
    "crate",
)
crate.spec(package="gstreamer", version="0.22.0", features=["v1_24"])
crate.spec(package="gstreamer-app", version="0.22.0", features=["v1_24"])
crate.from_specs(name="crates")
use_repo(crate, "crates")
