load("@rules_rust//rust:defs.bzl", "rust_binary","rust_test")
load("@rules_rust//cargo:defs.bzl", "cargo_build_script")

aliases = {
    "@crates//:gstreamer": "gst",
    "@crates//:gstreamer-app": "gst_app"
}

rust_binary(
  name = "app",
  srcs = ["main.rs"],
  aliases = aliases,
  deps = [
    "@crates//:gstreamer",
    "@crates//:gstreamer-app",
  ],
  visibility = ["//visibility:public"],
)

rust_test(
  name = "test_app",
  crate = ":app",
  timeout = "short",
  aliases = aliases,
  deps = [],
)

